<resources>
    <string name="app_name">StopmotionCamera</string>

    <string name="button_label_settings">Settings</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="activity_title_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_onion_skins">Onion Skinning</string>
    <string name="pref_description_onion_skins_on">Overlay preview of camera on onion skins of previous images
    </string>

    <string name="pref_title_dateformat_directory">Directory Name for Date</string>
    <string name="pref_content_format_of_picture_directory">yyyy-MM-dd-HH</string>
    <string name="pref_content_number_of_skins">3</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string name="pref_title_onion_skin_list">Number of Layers</string>
    <string-array name="pref_onion_skin_list">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string-array name="pref_onion_skin_list_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>







    <string name="pref_title_camera">Cameras</string>


    <string-array name="pref_camera_list">
      <item>None</item>
    </string-array>

    <string-array name="pref_camera_list_values">
        <item>-1</item>
    </string-array>




    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="pref_title_num_skins">Number of Skins</string>









</resources>
