<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="true"
        android:key="onion_skin"
        android:summary="@string/pref_description_onion_skins_on"
        android:title="@string/pref_title_onion_skins" />

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_content_format_of_picture_directory"
        android:inputType="textCapWords"
        android:key="dateformat_directory"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_dateformat_directory" />
   <!--0 <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_content_number_of_skins"
        android:inputType="number"
        android:key="onion_skin_number"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_num_skins" />
-->
    <ListPreference
        android:defaultValue="-1"
        android:entries="@array/pref_onion_skin_list"
        android:entryValues="@array/pref_onion_skin_list_values"
        android:key="onion_skin_list"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_onion_skin_list" />



    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!--  NOTE: ListPreference's summary should be set to its value by the activity code. -->
 <!--    <ListPreference
         android:defaultValue="-1"
         android:entries="@array/pref_example_list_titles"
         android:entryValues="@array/pref_example_list_values"
         android:key="example_list"
         android:negativeButtonText="@null"
         android:positiveButtonText="@null"
         android:title="@string/pref_title_add_friends_to_messages" />
-->
 </PreferenceScreen>
